handle response statuses

--- a/src/app/auth/component/sign-up/sign-up.component.less
+++ b/src/app/auth/component/sign-up/sign-up.component.less
@@ -1,3 +1,8 @@
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
 label {
   display: block;
   margin-top: 10px;
@@ -32,5 +37,9 @@ label {
 }
 
 .btn-margin {
+  margin-top: 10px;
+}
+
+.alert-response {
   margin-top: 10px;
 }
