--- a/src/app/auth/component/login/login.component.html
+++ b/src/app/auth/component/login/login.component.html
@@ -1,10 +1,9 @@
 <div class="col-md-12">
   <div class="card card-container">
-    <img
-      id="profile-img"
-      src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
-      class="profile-img-card"
-    />
+    <div class="header">
+      <h4 class="card-title mb-4 mt-1">Sign in</h4>
+      <a routerLink="/signup" ><button type="button" class="btn btn-outline-primary">Sign up</button></a>
+    </div>
     <form [formGroup]="loginForm" (ngSubmit)="login()" novalidate>
       <div class="form-group">
         <label [ngClass]="{'error-label': username.errors && (username.dirty || username.touched)}">Username</label>
@@ -17,7 +16,7 @@
       </div>
       <div class="form-group">
         <label [ngClass]="{'error-label': password.errors && (password.dirty || password.touched)}">Password</label>
-        <input formControlName="password" type="text" [ngClass]="{'error-input': password.errors && (password.dirty || password.touched)}" class="form-control"/>
+        <input formControlName="password" type="password" [ngClass]="{'error-input': password.errors && (password.dirty || password.touched)}" class="form-control"/>
         <div *ngIf="password.errors && (password.dirty || password.touched)">
           <div *ngIf="password.errors?.['required']" class="error-info">Password is required</div>
           <div *ngIf="password.errors?.['minlength']" class="error-info">Password must be at least 3 characters</div>
