--- a/src/app/auth/component/sign-up/sign-up.component.html
+++ b/src/app/auth/component/sign-up/sign-up.component.html
@@ -1,8 +1,9 @@
 <div class="col-md-12">
   <div class="card card-container">
-    <img id="profile-img"
-      src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
-      class="profile-img-card"/>
+    <div class="header">
+      <h4 class="card-title mb-4 mt-1">Sign up</h4>
+      <a routerLink="/login" ><button type="button" class="btn btn-outline-primary">Sign in</button></a>
+    </div>
     <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()" novalidate>
       <div class="form-group">
         <label [ngClass]="{'error-label': username.errors && (username.dirty || username.touched)}">Username</label>
@@ -25,10 +26,18 @@
         <label [ngClass]="{'error-label': password.errors && (password.dirty || password.touched)}">Password</label>
         <input formControlName="password" type="text" [ngClass]="{'error-input': password.errors && (password.dirty || password.touched)}" class="form-control"/>
         <div *ngIf="password.errors && (password.dirty || password.touched)">
-          <div *ngIf="username.errors?.['required']" class="error-info">Password is required</div>
-          <div *ngIf="username.errors?.['minlength']" class="error-info">Password must be at least 3 characters</div>
-          <div *ngIf="username.errors?.['maxlength']" class="error-info">Password must be at most 20 characters</div>
+          <div *ngIf="password.errors?.['required']" class="error-info">Password is required</div>
+          <div *ngIf="password.errors?.['minlength']" class="error-info">Password must be at least 3 characters</div>
+          <div *ngIf="password.errors?.['maxlength']" class="error-info">Password must be at most 20 characters</div>
         </div>
+      </div>
+      <div class="alert-response">
+        <alert *ngIf="success" type="info">
+          <strong>{{responseMsg}}</strong>
+        </alert>
+        <alert *ngIf="error" type="danger">
+          <strong>{{responseMsg}}</strong>
+        </alert>
       </div>
       <div class="form-group">
         <button class="btn btn-primary btn-block btn-margin" type="submit" [disabled]="signUpForm.invalid">Sign Up</button>
