--- a/src/app/shared-module/component/header/header.component.html
+++ b/src/app/shared-module/component/header/header.component.html
@@ -1,12 +1,6 @@
 <div class="header">
-  <div>
-    <div class="header__levels">
-      <ng-content select="[levels]"></ng-content>
-    </div>
-
-    <div class="other-content">
-      <ng-content select="[content]"></ng-content>
-    </div>
+  <div class="header__content">
+    <ng-content select="[content]"></ng-content>
   </div>
 
   <div class="header__btn--margin" *ngIf="!isUserLoggedIn">
