--- a/src/app/shared-module/component/header/header.component.less
+++ b/src/app/shared-module/component/header/header.component.less
@@ -7,11 +7,13 @@
   display: flex;
   justify-content: space-between;
 
-  &__levels {
+  &__content {
     font-size: 24px;
     font-weight: 700;
     color: @blue;
     text-transform: uppercase;
+    margin-top: auto;
+    margin-bottom: auto;
   }
 
   &__btn--margin {
