--- a/src/app/auth/component/login/login.component.html
+++ b/src/app/auth/component/login/login.component.html
@@ -23,6 +23,11 @@
           <div *ngIf="password.errors?.['maxlength']" class="error-info">Password must be at most 20 characters</div>
         </div>
       </div>
+      <div class="alert-response">
+        <alert *ngIf="error" type="danger">
+          <strong>{{errorMessage}}</strong>
+        </alert>
+      </div>
       <div class="form-group">
         <button class="btn btn-primary btn-block btn-margin" type="submit" [disabled]="loginForm.invalid">Login</button>
       </div>
