--- a/src/app/vehicle/car/component/cars-list/cars-list.component.less
+++ b/src/app/vehicle/car/component/cars-list/cars-list.component.less
@@ -1,5 +1,5 @@
 @import 'src/assets/styles/variables';
-
+@import "src/assets/styles/circle-progress";
 .total-cost,
 .no-cars-info {
   text-align: center;
