--- a/src/app/shared-module/component/header/header.component.html
+++ b/src/app/shared-module/component/header/header.component.html
@@ -1,4 +1,16 @@
 <div class="header">
+  <nav>
+    <div class="navbar">
+      <div class="container nav-container">
+        <input class="checkbox" type="checkbox" name="" id="" (click)="toggleSideBar()"/>
+        <div class="hamburger-lines">
+          <span class="line line1"></span>
+          <span class="line line2"></span>
+          <span class="line line3"></span>
+        </div>
+      </div>
+    </div>
+  </nav>
   <div class="header__content">
     <ng-content select="[content]"></ng-content>
   </div>
@@ -10,4 +22,5 @@
   <div class="header__btn--margin" *ngIf="isUserLoggedIn">
     <a><button type="button" class="btn btn-outline-success" (click)="logOut()">Logout</button></a>
   </div>
+
 </div>
