--- a/src/app/shared-module/component/main-content/main-content.component.html
+++ b/src/app/shared-module/component/main-content/main-content.component.html
@@ -1,4 +1,4 @@
-<cs-sidebar></cs-sidebar>
-<div id="content-wrapper">
+<cs-sidebar [collapse]="isSideBarCollapsed"></cs-sidebar>
+<div id="content-wrapper" [ngClass]="{'collapsed': isSideBarCollapsed}">
   <ng-content></ng-content>
 </div>
